; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/tests/extr_events.c_get_character_string.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/tests/extr_events.c_get_character_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_character_string.result = internal global [7 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_character_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_character_string(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @wctomb(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @get_character_string.result, i64 0, i64 0), i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp eq i32 %6, -1
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %8, %1
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds [7 x i8], [7 x i8]* @get_character_string.result, i64 0, i64 %11
  store i8 0, i8* %12, align 1
  ret i8* getelementptr inbounds ([7 x i8], [7 x i8]* @get_character_string.result, i64 0, i64 0)
}

declare dso_local i32 @wctomb(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
